app/assets/stylesheets/style.css
body {
    margin: 0;
    padding: 0;
    background: #E3DAB5;  /* background: #E2C738; */
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
    color: #464646;   /* color: #464646; */
}

h1, h2, h3 {
    margin: 0;
    padding: 0;
    font-family: Georgia, "Times New Roman", Times, serif;
    font-weight: normal;
    color: #181818;
}

h1 {
    font-size: 2em;
}

h2 {
    font-size: 2.0em;
}

h3 {
    font-size: 1.6em;
}

p, ul, ol {
    margin-top: 0;
    line-height: 180%;
}

ul, ol {
}

a {
    color: #333;
}

a:hover {
    text-decoration: none;
}

a img {
    border: 0;
}

a.no_underline {
    text-decoration: none;
}

.center {
    text-align: center;
}

.bold {
    font-weight: bold;
}

.italic {
    font-style: italic;
}

em {
    font-style: normal;
    font-weight: bold;
}

.float_left {
    float: left;
}

.float_right {
    float: right;
}

.clear {
    clear: both;
}

#wrapper {
    margin: 0 auto;
    padding: 0;
}

.boolean_true {
    color: green;
}

.boolean_false {
    color: red;
}

img.action-image {
    padding: 2px;
}

/* data table */

table.data, table.data th, table.data tr, table.data td {
    margin: 0;
    padding: 0;
    border-spacing: 0;
    border-collapse: collapse;
}

table.data th {
    border-bottom: 1px solid black;
    padding: 4px;
    font-size: 1.1em;
}

table.data tr.odd {
    background-color: #EEEEEE;
}

table.data tr.even {
    background-color: #CCCCCC;
}

table.data td {
    padding: 8px;
}

/* actions table */

table.actions {
}

/* form */

label {
    width: 100px;
    float: left;
    border-bottom: 1px dashed #C8B032;
    border-left: 4px solid #C8B032;
    padding-left: 6px;
    margin-right: 8px;
}

form input {
    margin-left: 6px;
}

textarea {
    margin: 13px 2px;
}

.fieldWithErrors {
    margin-bottom: 12px;
}

.fieldWithErrors input, .fieldWithErrors textarea {
    background: #FFEEDD;
}

.fieldWithErrors label {
    border-bottom: 1px solid red;
    border-left: 4px solid red;
    line-height: 180%;
}

.datepicker img {
	margin: 0 0 0 10px;
}

/* Header */

#header-wrapper {
}

#header {
    width: 960px;
    height: 190px;
    margin: 0 auto;
    background: url(../images/template/header.jpg) no-repeat right bottom;
}

/* Logo */

#logo {
    float: left;
    height: 240px;
    margin: 0;
    padding: 0;
    color: #FFFFFF;
}

#logo h1, #logo p {
    margin: 0;
    padding: 0;
}

#logo h1 {
    padding-top: 110px;
    padding-left: 10px;
    letter-spacing: -1px;
    font-size: 4.6em;
    color: #97B39F;
}

#logo h1 a {
    color: #E3295B;
}

#logo p {
    margin-top: -10px;
    padding: 12px 0 0 10px;
    font: normal 14px Georgia, "Times New Roman", Times, serif;
    font-style: italic;
    color: #464646;
}

#logo a {
    border: none;
    background: none;
    text-decoration: none;
    color: #464646;
}

/* Menu */

#menu {
    width: 960px;
    height: 38px;
    margin: 0 auto;
    padding: 0 0 6px 0;
    background: #000000;
}

#menu ul {
    margin: 0;
    padding: 0 0 0 15px;
    list-style: none;
    line-height: normal;
}

#menu li {
    float: left;
}

#menu a {
    display: block;
    height: 18px;
    margin-right: 3px;
    padding: 12px 18px 0 18px;
    text-decoration: none;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 13px;
    font-weight: normal;
    color: #FFFFFF;
    border: none;
}

#menu a:hover, #menu .current_page_item a {
}

#menu .current_page_item a {
    padding-left: 0;
}

#menu a:hover {
    text-decoration: underline;
}

/* Page */

#page {
    width: 960px;
    margin: 0 auto;
    padding: 0;
    background: url(../images/template/bg_col1.jpg) repeat-y left top;
}

#page-bgtop {
}

#page-bgbtm {
    padding: 0 20px 0 20px;
}

#flashes p.notice, #flashes_now p.notice {
    background: green;
    font-weight: bold;
    padding-left: 26px;
    font-size: 1.4em;
    color: #FFFFFF;
}

#flashes p.error, #flashes_now p.error {
    background: red;
    font-weight: bold;
    padding-left: 26px;
    font-size: 1.4em;
    color: #FFFFFF;
}

#flashes p.warning, #flashes_now p.warning {
    background: yellow;
    font-weight: bold;
    padding-left: 26px;
    font-size: 1.4em;
    color: #000000;
}

/* Content */

#content {
    float: right;
    width: 680px;
    padding: 0;
}

.post_header {
    padding-bottom: 24px;
}

.post {
    padding-bottom: 10px;
    margin-bottom: 15px;
    background: url(../images/template/post_bg.gif) no-repeat bottom center;
}

.post .title, .post_header .title {
    padding: 12px 0 0 20px;
    letter-spacing: -.5px;
    color: #3E574F;  /* color: #E3295B; */
}

.post .meta {
    padding: 8px 15px;
    margin: 11px 18px 4px 18px;
    background: #6A9E8D;
}

.post .meta a {
    color: #DDDDDD;
}

.post .meta p {
    margin: 0;
    padding: 0;
    line-height: 100%;
    font-size: 11px;
    color: #EEEEEE;
}

.post .entry {
    padding: 20px;
}

.post .footer {
    padding: 2px 20px;
}

.post .entry a.float-left {
    float: left;
    margin: 0 12px 12px 2px;
    font-size: 0.8em;
    font-weight: bold;
}

.post .entry a.float-right {
    float: right;
    margin: 0 12px 12px 2px;
    font-size: 0.8em;
    font-weight: bold;
}

.post .entry a.float-left:hover, .post .entry a.float-right:hover {
    text-decoration: none;
}

.post .entry a.float-left img, .post .entry a.float-right img {
    border: 5px solid #878787;
}

.post .entry a.float-left img.magnify, .post .entry a.float-right img.magnify {
    border: none;
}

.actions {
    margin-bottom: 10px;
    padding: 2px 20px 10px 20px;
}

div.preview_row_odd, div.preview_row_even {
    padding: 8px 20px 20px 20px;
    margin-bottom: 15px;
    background: url(../images/template/post_bg.gif) no-repeat bottom center;
}

div.preview_row_odd h3, div.preview_row_even h3 {
    padding-bottom: 16px;
}

div.preview_row_odd div.image {
    float: left;
    width: 150px;
    text-align: center;
}

div.preview_row_odd div.body {
    float: right;
    width: 470px;
}

div.preview_row_even div.image {
    float: right;
    width: 150px;
    text-align: center;
}

div.preview_row_even div.body {
    float: left;
    width: 470px;
    text-align: right;
}

div.preview_row_odd div.image img, div.preview_row_even div.image img {
    border: 5px solid #878787;
}

/* Sidebar */

#sidebar {
    float: left;
    width: 230px;
    margin-top: 30px;
}

#sidebar ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

#sidebar li {
    margin: 0;
    padding: 0;
}

#sidebar li ul {
    padding-bottom: 30px;
}

#sidebar li li {
    line-height: 35px;
    margin-right: 10px;
    border-bottom: 1px dashed #C8B032;
}

#sidebar li li span {
    display: block;
    padding: 0;
    font-size: 11px;
    font-style: italic;
}

#sidebar h2 {
    height: 38px;
    padding: 12px 0 0 0;
    letter-spacing: -.5px;
    color: #181818;
}

#sidebar p {
    margin: 0;
    padding: 0 20px 20px 0;
}

#sidebar a {
    border: none;
}

#sidebar a:hover {
    text-decoration: underline;
}

#sidebar div.thumb {
    text-align: right;
    margin: 10px 20px 4px 4px;
}

#sidebar div.thumb div.image img {
    border: 5px solid #878787;
}

#sidebar div.thumb p.linktext {
    padding: 0;
    font-size: 1.1em;
    font-weight: bold;
}

#sidebar div.thumb p.subtext {
    padding: 0;
    font-size: 0.9em;
    font-style: italic;
}

/* Footer */

#footer-wrapper {
}

#footer {
    width: 960px;
    height: 70px;
    margin: 0 auto;
    padding: 0 0 15px 0;
    background: url(../images/template/bg_footer1.jpg) no-repeat left top;
    font-family: Arial, Helvetica, sans-serif;
}

#footer p {
    margin: 0;
    padding-top: 40px;
    line-height: normal;
    font-size: 11px;
    text-align: center;
    color: #464646;
}

#footer a {
    color: #E3295B;
}

/*** Sections ***/

/* Posts */

div.post-footer {

}

ul h3.archive-year {
    padding: 10px;
}

/* Links */

ul.links {
    padding-left: 28px;
}

ul.links li {
    padding-bottom: 20px;
}

ul.links li span.description {
    margin-left: 10px;
}

/* Forms */

#breadcrumbs {
    margin: 2px 8px 2px 12px;
    padding: 6px;
    font-size: 1.2em;
    border-bottom: 1px dashed #C8B032;
    border-left: 4px solid #C8B032;
}

#breadcrumbs-blank {
    margin: 2px 8px 3px 12px;
    padding: 6px;
    font-size: 1.2em;
}

div.entry ul.menu {

}

div.entry ul.menu li {

}

/***** Images ******/

#upload {
    display: none;
    width: 400px;
    border: 10px solid #666;
    /** border: 10px solid rgba(82, 82, 82, 0.698); **/
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
}

#upload div {
    padding: 10px;
    background-color: #fff;
    font-family: "lucida grande", tahoma, verdana, arial, sans-serif
}

#upload h2 {
    padding: 5px 10px;
    font-size: 20px;
}

#upload div p {
    padding: 10px;
}

#upload .throbber {
    display: none;
    padding-left: 40px;
}

#images_add {
    padding-top: 12px;
    font-style: italic;
}

#images_add span.count {
    padding-left: 10px;
}

div.hscroll_images {
    width: 636px;
    overflow: auto;
    white-space: nowrap;
}

table.image td {

}

a.thumb img {
    border: 5px solid #878787;
}

a.thumb_primary img {
    border: 5px solid red;
}

div.primary_image {
    text-align: center;
    padding-bottom: 20px;
}

.multi_image img {
    border: 5px solid #878787;
}

.multi_image .primary {
    text-align: center;
}

.multi_image .others {
    text-align: left;
    overflow: auto;
    white-space: nowrap;
}

.multi_image .others img {
    margin: 6px;
}

